refactor: linting and validator

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <div class="navbar-form navbar-right">
                     <div  class="form-group btn-div">
-                        <button class="my-btn"><a href="#summary">Summary </a></button>
-                        <button class="my-btn"><a href="#totals">Totals</a></button>
-                        <button class="my-btn"><a href="#food-main">Tracker</a></button>
-                        <button class="my-btn"><a href="#trends">Trends</a></button>
+                        <a href="#summary"><button class="my-btn">Trends</button></a>
+                        <a href="#totals"><button class="my-btn">Totals</button></a>
+                        <a href="#food-main"><button class="my-btn">Tracker</button></a>
+                        <a href="#trends"><button class="my-btn">Summary</button></a>
                     </div>
 
                 </div>
@@ -73,7 +73,7 @@
                 <section id="summary" class="sub-section"></section>
                 <section id="totals" class="sub-section">
                     <div class="section-header">
-                        <h3>Totals!!</h3>
+                        <h3>Totals</h3>
                     </div>
                     <div id="totals-view">
                         <ul id="totals-ul"></ul>
@@ -92,7 +92,7 @@
                 </section>
                 <section id="trends" class="sub-section">
                     <div class="section-header">
-                        <h3>Trends!!</h3>
+                        <h3>Trends!</h3>
                     </div>
                     <div id="trends-view">
                     </div>
